# shuffile

./: .travis.yml  CMakeLists.txt  README.md
cmake/: SHUFFILE_ADD_TEST.cmake
src/: CMakeLists.txt  shuffile.c  shuffile.h  shuffile_io.c  shuffile_io.h  shuffile_util.c  shuffile_util.h
test/: CMakeLists.txt  test1.c  test_config.c
